cmake_minimum_required(VERSION 3.30)
project(C)

set(CMAKE_CXX_STANDARD 26)

add_executable(C main.cpp
        Arrays.cpp
        CadeaChar.cpp
        Parcial1/a.cpp
        Parcial1/b.cpp
        "struct and files.cpp"
        binarios.cpp
        Convalidacion/uno.cpp
        Arreglos/3.cpp
        Arreglos/7.cpp
        pointers.cpp
)
