cmake_minimum_required(VERSION 4.0)
project(POO_C__)

set(CMAKE_CXX_STANDARD 20)

add_executable(POO_C__ main.cpp
        salida1.cpp
        compu.cpp
        vector.cpp
        time.cpp
        empleado.cpp
        Factura.cpp
        herencia.cpp
        alpaca.cpp
        alpaca2.cpp
        alpaca3.cpp
        China-Olimpic.cpp
        prim.cpp
        optimizado-olimpiadas.cpp
        mayorsubmatriz.cpp
        deque.cpp
        contarfrecuancia.cpp
        Operadores.cpp)
